<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      >

    <LinearLayout
        android:id="@+id/activity_create_deal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.latefire.deals.activity.CreateDealActivity"
        >

      <ImageView
          android:id="@+id/imgDeal"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:scaleType="fitCenter"
          android:src="@drawable/placeholder"
          />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:hint="@string/title"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            />
      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:maxLines="1"
            android:inputType="numberDecimal"
            />
      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <EditText
            android:id="@+id/etDealPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/deal_price"
            android:inputType="numberDecimal"
            />
      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/btnSave"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:layout_marginTop="30dp"
          android:background="@drawable/drawable_button_create_deal"
          android:paddingLeft="50dp"
          android:paddingRight="50dp"
          android:text="@string/save"
          android:textColor="@android:color/white"
          />


    </LinearLayout>
  </ScrollView>
</layout>