<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <import type="android.view.View" />
    <variable
        name="business"
        type="org.latefire.deals.database.Business"
        />
    <variable
        name="customer"
        type="org.latefire.deals.database.Customer"
        />
    <variable
        name="ui"
        type="org.latefire.deals.base.UserProfileActivity.UiHandler"
        />
  </data>

  <android.support.design.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true"
      >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

      <android.support.design.widget.CollapsingToolbarLayout
          android:id="@+id/collapsing_toolbar"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fitsSystemWindows="true"
          app:contentScrim="?attr/colorPrimary"
          app:expandedTitleMarginEnd="64dp"
          app:expandedTitleMarginStart="48dp"
          app:layout_scrollFlags="scroll|exitUntilCollapsed"
          app:titleEnabled="false"
          >

        <ImageView
            android:id="@+id/user_profile_iv_photo"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:imgUserAvatarBlur="@{ui.userType == ui.USER_TYPE_BUSINESS ? business.profilePhoto : customer.profilePhoto}"
            android:src="@drawable/dummy"
            android:transitionName="@string/deal"
            app:layout_collapseMode="parallax"
            tools:targetApi="lollipop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

          <com.makeramen.roundedimageview.RoundedImageView
              android:id="@+id/img_avatar"
              android:layout_width="150dp"
              android:layout_height="150dp"
              android:layout_margin="10dp"
              android:clickable="@{ui.mode == ui.MODE_EDIT}"
              android:minHeight="50dp"
              android:minWidth="50dp"
              android:scaleType="centerCrop"
              android:src="@drawable/dummy"
              app:imgUserAvatar="@{ui.userType == ui.USER_TYPE_BUSINESS ? business.profilePhoto : customer.profilePhoto}"
              app:riv_border_color="@android:color/white"
              app:riv_border_width="2dp"
              app:riv_mutate_background="true"
              app:riv_oval="true"
              app:srcCompat="@mipmap/ic_launcher"
              />

          <EditText
              android:id="@+id/tv_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:focusableInTouchMode="@{ui.mode == ui.MODE_EDIT}"
              android:gravity="center"
              android:padding="10dp"
              android:text="@{ui.userType == ui.USER_TYPE_BUSINESS ? business.businessName : customer.name}"
              android:textColor="@android:color/white"
              android:textSize="20sp"
              fontPath="fonts/OmnesSemiBold.otf"
              />
        </LinearLayout>


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

      </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <android.support.v7.widget.CardView
            android:id="@+id/deal_details_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/space_medium"
            app:cardUseCompatPadding="true"
            >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/background_card_user_profile"
              android:orientation="vertical"
              android:padding="20dp"
              >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/white"
                android:textColorHint="@android:color/white"
                >
              <EditText
                  android:id="@+id/etEmail"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/ic_contact_mail_24dp"
                  android:drawablePadding="10dp"
                  android:hint="@string/email"
                  android:focusableInTouchMode="@{ui.mode == ui.MODE_EDIT}"
                  android:inputType="textEmailAddress"
                  android:maxLines="1"
                  android:text="@{ui.userType == ui.USER_TYPE_BUSINESS ? business.email : customer.email}"
                  android:textColor="@android:color/white"
                  />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/white"
                android:textColorHint="@android:color/white"
                >
              <EditText
                  android:id="@+id/etMobile"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/ic_contact_phone_24dp"
                  android:drawablePadding="10dp"
                  android:hint="@string/mobile"
                  android:focusableInTouchMode="@{ui.mode == ui.MODE_EDIT}"
                  android:inputType="textCapSentences"
                  android:maxLines="1"
                  android:text="@{ui.userType == ui.USER_TYPE_BUSINESS ? business.phone : customer.phone}"
                  android:textColor="@android:color/white"
                  />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/white"
                android:textColorHint="@android:color/white"
                >
              <EditText
                  android:id="@+id/etAddress"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/ic_location_city_24dp"
                  android:drawablePadding="10dp"
                  android:hint="@string/address"
                  android:inputType="textCapSentences"
                  android:focusableInTouchMode="@{ui.mode == ui.MODE_EDIT}"
                  android:maxLines="1"
                  android:text='@{ui.userType == ui.USER_TYPE_BUSINESS ? business.addressLine1: ""}'
                  android:textColor="@android:color/white"
                  android:visibility="@{ui.userType == ui.USER_TYPE_BUSINESS ? View.VISIBLE : View.GONE}"
                  />
            </android.support.design.widget.TextInputLayout>


          </LinearLayout>

        </android.support.v7.widget.CardView>


      </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_follow"
        android:src="@drawable/ic_favorite_24dp"
        app:backgroundTint="#FFC107"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        style="@style/FabStyle"
        />

  </android.support.design.widget.CoordinatorLayout>
</layout>